Added media queries for mobile

--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="grid-container">
-      <img src="./images/image-product-desktop.jpg" alt="">
+      <img src="./images/image-product-desktop.jpg" alt="" class="product__image">
       <div class="text-container">
         <h6 class="overview">PERFUME</h6>
         <h2 class="product__name">Gabrielle Essence Eau De Parfum</h2>
