Added code for desktop and mobile

--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -9,17 +9,24 @@
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <div class="bg">
+    <img src="./images/bg-pattern-top.svg" alt="" class="bg-top">
+    <img src="./images/bg-pattern-bottom.svg" alt="" class="bg-bottom">
+  </div>
+  <div class="container">
+    <div class="background-img">
+      <img src="./images/bg-pattern-card.svg" alt="">
+    </div>
+    <div class="profile">
+      <img src="./images/image-victor.jpg" alt="">
+      <h4>Victor Crest <span class="age">26</span></h4>
+      <p>London</p>
+    </div>
+    <div class="profile__stats">
+      <h4>80K <span class="data">Followers</span></h4>
+      <h4>803K <span class="data">Links</span></h4>
+      <h4>1.4K <span class="data">Photos</span></h4>
+    </div>
+  </div>
 </body>
 </html>
