--- a/social-proof-section-master/index.html
+++ b/social-proof-section-master/index.html
@@ -21,7 +21,7 @@
         </div>
         <!-- ratings -->
         <div class="product__ratings">
-          <div class="website__review">
+          <div class="website__review first-rating">
             <div class="star__rating">
               <img src="./images/icon-star.svg" alt="5 star rating">
               <img src="./images/icon-star.svg" alt="5 star rating">
@@ -31,7 +31,7 @@
             </div>
             <span>Rated 5 stars in Reviews</span>
           </div>
-          <div class="website__review">
+          <div class="website__review second-rating">
             <div class="star__rating">
               <img src="./images/icon-star.svg" alt="5 star rating">
               <img src="./images/icon-star.svg" alt="5 star rating">
@@ -41,7 +41,7 @@
             </div>
             <span>Rated 5 stars in Report Guru</span>
           </div>
-          <div class="website__review">
+          <div class="website__review third-rating">
             <div class="star__rating">
               <img src="./images/icon-star.svg" alt="5 star rating">
               <img src="./images/icon-star.svg" alt="5 star rating">
@@ -57,7 +57,7 @@
       <!-- User data -->
       
       <div class="user__reviews lower-container">
-        <div class="user">
+        <div class="user first-user">
           <div class="user__name">
             <img src="./images/image-colton.jpg" alt="">
             <div class="credentials">
@@ -71,7 +71,7 @@
           Excellent!"
           </p>
         </div>
-        <div class="user">
+        <div class="user second-user">
           <div class="user__name">
             <img src="./images/image-irene.jpg" alt="">
             <div class="credentials">
@@ -84,7 +84,7 @@
             delighted with the simplicity of the purchase and the speed of delivery."
           </p>
         </div>
-        <div class="user">
+        <div class="user third-user">
           <div class="user__name">
             <img src="./images/image-anne.jpg" alt="">
             <div class="credentials">
