--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -9,23 +9,33 @@
   <title>Frontend Mentor | Four card feature section</title>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  <div class="container">
+    <div class="heading">
+      <p class="describe">Reliable, efficient delivery</p>
+      <h2>Powered by Technology</h2>
+      <p class="description-para">Our Artificial Intelligence powered tools use millions of project data points 
+        to ensure that your project is successful</p>
+    </div>
+    <div class="card cyan">
+      <h3>Supervisor</h3>
+      <p>Monitors activity to identify project roadblocks</p>
+      <img src="./images/icon-supervisor.svg" alt="Supervisor-icon">
+    </div>
+    <div class="card red">
+      <h3>Team Builder</h3>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="./images/icon-team-builder.svg" alt="Supervisor-icon">
+    </div>
+    <div class="card orange">
+      <h3>Karma</h3>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="./images/icon-karma.svg" alt="Supervisor-icon">
+    </div>
+    <div class="card blue">
+      <h3>Calculator</h3>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="./images/icon-calculator.svg" alt="Supervisor-icon">
+    </div>
+  </div>
 </body>
 </html>
