Adding code changes for desktop & fixes for mobile

--- a/ping-coming-soon-page-master/index.html
+++ b/ping-coming-soon-page-master/index.html
@@ -15,9 +15,9 @@
     <p class="subscribe">Subscribe and get notified</p>
     <form action="">
       <div class="form-control">
-        <input type="email" name="email" placeholder="Your email address...">
-        <small>Please provide a valid email address</small>
+        <input type="email" name="email" placeholder="Your email address..." />
       </div>
+      <p class="error-state">Please provide a valid email address</p>
       <button class="notify">Notify Me</button>
     </form>
     <div class="main-img">
