--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -5,61 +5,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Daniel Clifford
-  Verified Graduate
+  <div class="container">
+    <div class="card purple quote-bg">
+      <div class="profile-container">
+        <img src="./images/image-daniel.jpg" alt="Daniel">
+        <h3 class="name">Daniel Clifford <span class="verified">Verified Graduate</span></h3>
+      </div>
+      <h2 class="profile-highlight">I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+        in the company I joined. I honestly feel I got every penny’s worth.
+      </h2>
+      <p class="profile-review">
+        “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
+      transition and have heard some people who had an amazing experience here. I signed up 
+      for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
+      The next 12 weeks was the best - and most grueling - time of my life. Since completing 
+      the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+      </p>
+    </div>
+    <div class="card grayish-blue">
+      <div class="profile-container">
+        <img src="./images/image-jonathan.jpg" alt="Jonathan">
+        <h3 class="name">Jonathan Walters <span class="verified">Verified Graduate</span></h3>
+      </div>
 
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
+      <h2 class="profile-highlight">The team was very supportive and kept me motivated
+      </h2>
+      <p class="profile-review">
+        “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
+      for a big company. This was one of the best investments I’ve made in myself. ”
+      </p>
+    </div>
+    <div class="card white bot-left">
+      <div class="profile-container">
+        <img src="./images/image-jeanette.jpg" alt="Jeanette">
+        <h3 class="name">Jeanette Harmon <span class="verified">Verified Graduate</span></h3>
+      </div>
 
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-
-  Jonathan Walters
-  Verified Graduate
-
-  The team was very supportive and kept me motivated
-
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
-
-  Jeanette Harmon
-  Verified Graduate
-
-  An overall wonderful and rewarding experience
-
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
+      <h2 class="profile-highlight">An overall wonderful and rewarding experience
+      </h2>
+      <p class="profile-review">
+        “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
   while doing something I love. ”
+      </p>
+    </div>
+    <div class="card blackish-blue">
+      <div class="profile-container">
+        <img src="./images/image-patrick.jpg" alt="Patrick">
+        <h3 class="name">Patrick Abrams <span class="verified">Verified Graduate</span></h3>
+      </div>
 
-  Patrick Abrams
-  Verified Graduate
+      <h2 class="profile-highlight">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+        learning from their experiences was easy.
+      </h2>
+      <p class="profile-review">
+        “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
+        gave me the confidence necessary to be able to go out in the world and present myself as a capable 
+        junior developer. The standard is above the rest. You will get the personal attention you need from 
+        an incredible community of smart and amazing people. ”
+      </p>
+    </div>
+    <div class="card white top-left">
+      <div class="profile-container">
+        <img src="./images/image-kira.jpg" alt="Kira">
+        <h3 class="name">Kira Whittle <span class="verified">Verified Graduate</span></h3>
+      </div>
 
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
-
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
-
-  Kira Whittle
-  Verified Graduate
-
-  Such a life-changing experience. Highly recommended!
-
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+      <h2 class="profile-highlight">Such a life-changing experience. Highly recommended!
+      </h2>
+      <p class="profile-review">
+        “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
   professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
   student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
   did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
@@ -67,10 +85,9 @@
   could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
   experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
   100% recommend! ”
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      </p>
+    </div>
+    <!-- Container End -->
+  </div>  
 </body>
 </html>
