--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -41,6 +41,14 @@
       <a href="" class="car__details">Learn More</a>
     </div>
   </div>
+  <footer>
+    <div class="footer-container">
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+      </p>
+    </div>
+  </footer>
 
 </body>
 </html>
