--- a/huddle-landing-page-with-alternating-feature-blocks-master/index.html
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/index.html
@@ -3,68 +3,122 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div class="bg-container">
+    <header class="container header-container">
+      <div class="logo-container">
+        <img src="./images/logo.svg" alt="Huddle logo" class="main-logo">
+      </div>
+      <a href="" class="trial">Try It Free</a>
+    </header>
+    <div class="intro">
+      <div class="intro-text">
+        <h2>Build The Community Your Fans Will Love</h2>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+          Create connections with your users as you engage in genuine discussion. 
+        </p>
+        <a href="" class="pink-btn">Get Started For Free</a>
+      </div>
+      <div class="image-container">
+        <img src="./images/illustration-mockups.svg" alt="">
+      </div>
+    </div>
+  </div>
+  <main class="container">
+    <div class="card">
+      <div class="image-container">
+        <img src="./images/illustration-grow-together.svg" alt="Grow Together">
+      </div>
+      <div class="card-text-container">
+        <h3>Grow Together</h3>
+        <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
+          Think of the insightful conversations you miss out on with a feedback form. 
+        </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image-container">
+        <img src="./images/illustration-flowing-conversation.svg" alt="Flowing Conversations">
+      </div>
+      <div class="card-text-container">
+        <h3>Flowing Conversations</h3>
+        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+          have just-in-time loading for a more natural flow.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image-container">
+        <img src="./images/illustration-your-users.svg" alt="Your Users">
+      </div>
+      <div class="card-text-container">
+        <h3>Your Users</h3>
+        <p>It takes no time at all to integrate Huddle with your app's authentication solution. 
+          This means, once signed in to your app, your users can start chatting immediately.
+        </p>
+      </div>
+    </div>
+  </main>
+  <footer class="full-footer">
+    <div class="special-card card container">
+      <h4 class="special-header">Ready To Build Your Community?</h4>
+      <a href="" class="pink-btn">Get Started For Free</a>
+    </div>
+    <div class="footer-flex">
+      <div class="main-footer logo-box">
+        <div class="footer-image-container">
+          <img src="./images/logo.svg" alt="footer image">
+        </div>
+        <div class="location flex-divide">
+          <img src="./images/icon-location.svg" alt="icon-location" class="icon-display">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+            incididunt ut labore et dolore magna aliqua
+          </p>
+        </div>
+        <div class="number flex-divide">
+          <img src="./images/icon-phone.svg" alt="icon-phone" class="icon-display">
+          <p>+1-543-123-4567</p>
+        </div>
+        <div class="email flex-divide">
+          <img src="./images/icon-email.svg" alt="icon-email" class="icon-display">
+          <p>example@huddle.com</p>
+        </div>
+      </div> <!--Logo box end-->
+      <div class="main-footer footer-group group-left">
+        <p><a href="#" class="self-links">About Us</a></p>
+        <p><a href="#" class="self-links">What We Do</a></p>
+        <p><a href="#" class="self-links">FAQ</a></p>
+      </div>
+      <div class="main-footer footer-group group-right">
+        <p><a href="#" class="self-links">Career</a></p>
+        <p><a href="#" class="self-links">Blog</a></p>
+        <p><a href="#" class="self-links">Contact Us</a></p>
+      </div>
+      <div class="social-icons-container">
+        <div class="icon-container">
+          <a href="#" class="social-icon self-links"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#" class="social-icon self-links"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#" class="social-icon self-links"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+          <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+  <!-- Social icons / copyright container -->
 
-  Try It Free
+  
 
-  Build The Community Your Fans Will Love
+  
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Get Started For Free
-
-  Grow Together
-
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
-  <footer>
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
 </html>
