--- a/huddle-landing-page-with-alternating-feature-blocks-master/index.html
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <main class="container">
-    <div class="card">
+    <div class="card card-img-right">
       <div class="image-container">
         <img src="./images/illustration-grow-together.svg" alt="Grow Together">
       </div>
@@ -51,7 +51,7 @@
           have just-in-time loading for a more natural flow.</p>
       </div>
     </div>
-    <div class="card">
+    <div class="card card-img-right">
       <div class="image-container">
         <img src="./images/illustration-your-users.svg" alt="Your Users">
       </div>
@@ -68,7 +68,7 @@
       <h4 class="special-header">Ready To Build Your Community?</h4>
       <a href="" class="pink-btn">Get Started For Free</a>
     </div>
-    <div class="footer-flex">
+    <div class="footer-flex container">
       <div class="main-footer logo-box">
         <div class="footer-image-container">
           <img src="./images/logo.svg" alt="footer image">
@@ -88,16 +88,19 @@
           <p>example@huddle.com</p>
         </div>
       </div> <!--Logo box end-->
-      <div class="main-footer footer-group group-left">
-        <p><a href="#" class="self-links">About Us</a></p>
-        <p><a href="#" class="self-links">What We Do</a></p>
-        <p><a href="#" class="self-links">FAQ</a></p>
-      </div>
-      <div class="main-footer footer-group group-right">
-        <p><a href="#" class="self-links">Career</a></p>
-        <p><a href="#" class="self-links">Blog</a></p>
-        <p><a href="#" class="self-links">Contact Us</a></p>
-      </div>
+      <!-- <div class="main-footer footer-group "> -->
+        <div class="link-group group-left">
+          <p><a href="#" class="self-links">About Us</a></p>
+          <p><a href="#" class="self-links">What We Do</a></p>
+          <p><a href="#" class="self-links">FAQ</a></p>
+        </div>
+        <div class=" link-group group-right">
+          <p><a href="#" class="self-links">Career</a></p>
+          <p><a href="#" class="self-links">Blog</a></p>
+          <p><a href="#" class="self-links">Contact Us</a></p>
+        </div>
+      <!-- </div> -->
+
       <div class="social-icons-container">
         <div class="icon-container">
           <a href="#" class="social-icon self-links"><i class="fa-brands fa-facebook-f"></i></a>
@@ -108,17 +111,11 @@
       </div>
     </div>
   </footer>
-  <!-- Social icons / copyright container -->
-
-  
-
-  
-
-  <!-- <footer>
+  <div class="attribution">
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/vidhitvarma">Vidhit Varma</a>.
     </p>
-  </footer> -->
+  </div>
 </body>
 </html>
