Adding changes to js

--- a/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/fylo-landing-page-with-two-column-layout-master/index.html
@@ -41,7 +41,7 @@
         <form id="form-top" class="form ">
           <div class="form-control upper">
             <label for="email"></label>
-            <input type="email" id="email" placeholder="Enter your email...">
+            <input type="text" id="email" placeholder="Enter your email...">
             <small class="upper-error">Error message</small>
           </div>
           <button id="btn-submit" class="cta-buttons">Get started</button>
@@ -93,7 +93,7 @@
     <form id="form-bottom" class="form lower-form">
       <div class="form-control lower">
         <label for="email"></label>
-        <input type="email" id="email-bottom" placeholder="email@example.com">
+        <input type="text" id="email-bottom" placeholder="email@example.com">
         <small class="sub-error">Error message</small>
       </div>
       <button id="btn-submit" class="cta-buttons">Get started For Free</button>
