--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -11,8 +11,11 @@
 <body>
   <div class="container">
     <div class="grid-container">
-      <img src="./images/image-product-desktop.jpg" alt="" class="product__image">
-      <div class="text-container">
+      <div class="img-container">
+        <img src="./images/image-product-desktop.jpg" alt="" class="product__image desktop-img">
+        <img src="./images/image-product-mobile.jpg" alt="" class="product__image mobile-image">
+      </div>
+        <div class="text-container">
         <h6 class="overview">PERFUME</h6>
         <h2 class="product__name">Gabrielle Essence Eau De Parfum</h2>
         <p class="product__description">
@@ -23,14 +26,21 @@
           <h1 class="discounted__price">$149.99</h1>
           <p class="original__price">$169.99</p>
         </div>
-        <button> 
-          <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
-          Add to Cart
+        <button class="btn-class"> 
+          <img src="./images/icon-cart.svg" alt="" class="icon"><p>Add to Cart</p>
         </button>
       </div>
     </div>
   </div>
 
   <!-- Footer -->
+  <footer>
+    <div class="footer-container">
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
