--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -11,9 +11,6 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-  <!-- <div class="bg-card">
-    <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="437"><path fill="#D6E1FF" fill-rule="evenodd" d="M0 349.974c218.558 116.035 460.05 116.035 724.475 0s502.933-116.035 715.525 0V0H0v349.974z"/></svg>
-  </div> -->
   <div class="container">
     <div class="img-container">
       <img src="./images/illustration-hero.svg" alt="">
@@ -37,6 +34,11 @@
     <!-- <button class="cnf-payment">Proceed to Payment</button> -->
     <div class="cancel"><a href="">Cancel Order</a></div>
   </div>
-  
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
+</footer>
 </body>
 </html>
