--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -39,5 +39,11 @@
       </div>
     </div>
   </div>
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
+</footer>
 </body>
 </html>
