--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="monthly-subscription sub-containers">
       <h3>Monthly Subscription</h3>
-      <h1>&dollar;29 <span class="per-month">per month</span></h1>
+      <h1 class="price">&dollar;29 <span class="per-month">per month</span></h1>
       <p>Full access for less than &dollar;1 a day</p>
       <a href="" class="signup-btn">Sign Up</a>
     </div>
@@ -35,5 +35,11 @@
       </ul>
     </div>
   </div>
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
+</footer>
 </body>
 </html>
