--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -12,13 +12,13 @@
   <div class="container">
     <div class="community-header sub-containers">
       <h2>Join our community</h2>
-      <h4>30-day, hassle-free money back guarantee</h4>
+      <p class="sub-header">30-day, hassle-free money back guarantee</p>
       <p>Gain access to our full library of tutorials along with expert code reviews. 
         Perfect for any developers who are serious about honing their skills.</p>
     </div>
     <div class="monthly-subscription sub-containers">
       <h3>Monthly Subscription</h3>
-      <h1 class="price">&dollar;29 <span class="per-month">per month</span></h1>
+      <p class="price">&dollar;29 <span class="per-month">per month</span></p>
       <p>Full access for less than &dollar;1 a day</p>
       <a href="" class="signup-btn">Sign Up</a>
     </div>
