--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
   <div class="container">
+    
+    <!-- PURPLE CARD -->
     <div class="card purple quote-bg">
       <div class="profile-container">
-        <img src="./images/image-daniel.jpg" alt="Daniel">
+        <div class="img-container">
+          <img src="./images/image-daniel.jpg" alt="Daniel">
+        </div>
         <h3 class="name">Daniel Clifford <span class="verified">Verified Graduate</span></h3>
       </div>
       <h2 class="profile-highlight">I received a job offer mid-course, and the subjects I learned were current, if not more so, 
@@ -26,9 +30,13 @@
       the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
       </p>
     </div>
+
+    <!-- GRAY CARD -->
     <div class="card grayish-blue">
       <div class="profile-container">
-        <img src="./images/image-jonathan.jpg" alt="Jonathan">
+        <div class="img-container">
+          <img src="./images/image-jonathan.jpg" alt="Jonathan">
+        </div>
         <h3 class="name">Jonathan Walters <span class="verified">Verified Graduate</span></h3>
       </div>
 
@@ -39,9 +47,13 @@
       for a big company. This was one of the best investments I’ve made in myself. ”
       </p>
     </div>
+    
+    <!-- WHITE CARD  -->
     <div class="card white bot-left">
       <div class="profile-container">
-        <img src="./images/image-jeanette.jpg" alt="Jeanette">
+        <div class="img-container">
+          <img src="./images/image-jeanette.jpg" alt="Jeanette">
+        </div>
         <h3 class="name">Jeanette Harmon <span class="verified">Verified Graduate</span></h3>
       </div>
 
@@ -52,9 +64,13 @@
   while doing something I love. ”
       </p>
     </div>
+
+    <!-- BLACKISH CARD -->
     <div class="card blackish-blue">
       <div class="profile-container">
-        <img src="./images/image-patrick.jpg" alt="Patrick">
+        <div class="img-container">
+          <img src="./images/image-patrick.jpg" alt="Patrick">
+        </div>
         <h3 class="name">Patrick Abrams <span class="verified">Verified Graduate</span></h3>
       </div>
 
@@ -68,9 +84,13 @@
         an incredible community of smart and amazing people. ”
       </p>
     </div>
+
+    <!-- WHITE CARD -->
     <div class="card white top-left">
       <div class="profile-container">
-        <img src="./images/image-kira.jpg" alt="Kira">
+        <div class="img-container">
+          <img src="./images/image-kira.jpg" alt="Kira">
+        </div>
         <h3 class="name">Kira Whittle <span class="verified">Verified Graduate</span></h3>
       </div>
 
@@ -89,5 +109,11 @@
     </div>
     <!-- Container End -->
   </div>  
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
+</footer>
 </body>
 </html>
