adding changes to styles

--- a/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -10,28 +10,35 @@
 
 </head>
 <body>
-  <div class="container">
-    <header class="header">
-      <img src="./images/logo.svg" alt="">
-    </header>
-    <div class="grid-container">
-      <div class="img-container">
-        <img src="./images/illustration-mockups.svg" alt="" class="main-image">
-      </div>
-      <div class="description">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-          Create connections with your users as you engage in genuine discussion. 
-        </p>
-        <a href="" class="register">Register</a>
-      </div>
+  <header class="main-header">
+    <div class="image-container header-img">
+      <img src="./images/logo.svg" alt="Huddle Logo"/>
     </div>
-    <footer class="footer">
-      <a href="" class="socials"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="" class="socials"><i class="fa-brands fa-twitter"></i></a>
-      <a href="" class="socials"><i class="fa-brands fa-instagram"></i></a>
-    </footer>
-  </div>
+  </header>
+  <main class="main">
+    <div class="image-container body-img">
+      <img src="./images/illustration-mockups.svg" alt="mockup">
+    </div>
+    <article class="text-container">
+      <h2>Build The Community Your Fans Will Love</h2>
+      <p class="description">
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion. 
+      </p>
+      <button class="btn-register">Register</button>
+    </article>
+    
+  </main>
+  <footer class="social-links">
+    <a href="" class="social-link"><i class="fa-brands fa-facebook-f"></i></a>
+    <a href="" class="social-link"><i class="fa-brands fa-twitter"></i></a>
+    <a href="" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+  </footer>
+
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
   
 </body>
 </html>
