Changing layout for phone

--- a/social-proof-section-master/index.html
+++ b/social-proof-section-master/index.html
@@ -8,98 +8,90 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body>
-    <div class="container">
+    <main>
       <div class="upper-container">
-        <div class="description">
-          <h2 class="description__header">
-            10,000+ of our users love our products.
-          </h2>
-          <p class="description__para">
-            We only provide great products combined with excellent customer service.
+        <div class="left-container">
+          <h1 class="main-header">10,000+ of our users love our products.</h1>
+          <p>We only provide great products combined with excellent customer service.
             See what our satisfied customers are saying about our services.
           </p>
+          <!-- End of Left container -->
         </div>
-        <!-- ratings -->
-        <div class="product__ratings">
-          <div class="website__review first-rating">
-            <div class="star__rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
+        <!-- Right container -->
+        <div class="right-container">
+          <div class="review">
+            <div class="star-container">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
             </div>
-            <span>Rated 5 stars in Reviews</span>
+            <p>Rated 5 Stars in Reviews</p>
           </div>
-          <div class="website__review second-rating">
-            <div class="star__rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
+          <div class="review">
+            <div class="star-container">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
             </div>
-            <span>Rated 5 stars in Report Guru</span>
+            <p>Rated 5 Stars in Report Guru</p>
           </div>
-          <div class="website__review third-rating">
-            <div class="star__rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
-              <img src="./images/icon-star.svg" alt="5 star rating">
+          <div class="review">
+            <div class="star-container">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
+              <img src="./images/icon-star.svg" alt="star">
             </div>
-            <span>Rated 5 stars in BestTech</span>
+            <p>Rated 5 Stars in BestTech</p>
           </div>
-          <!-- Third party ratings end div -->
+          <!-- End of right container -->
         </div>
+        <!-- End of upper container -->
       </div>
-      <!-- User data -->
-      
-      <div class="user__reviews lower-container">
-        <div class="user first-user">
-          <div class="user__name">
-            <img src="./images/image-colton.jpg" alt="">
-            <div class="credentials">
-              <h3>Colton Smith</h3>
-              <p>Verified Buyer</p>
-            </div>
+      <!-- Start of lower container -->
+      <div class="lower-container">
+        <div class="profile">
+          <div class="user-container">
+            <img src="./images/image-colton.jpg" alt="Colton Smith">
+            <p class="name">Colton Smith <span class="verified">Verified Buyer</span></p>
           </div>
-          <p class="user__review">
-          "We needed the same printed design as the one we hadordered a week prior.
-          Not only did they find the original order, but we also received it in time.
-          Excellent!"
+          <p>"We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent!"
           </p>
         </div>
-        <div class="user second-user">
-          <div class="user__name">
-            <img src="./images/image-irene.jpg" alt="">
-            <div class="credentials">
-              <h3>Irene Roberts</h3>
-              <p>Verified Buyer</p>
-            </div>
+        <div class="profile">
+          <div class="user-container">
+            <img src="./images/image-irene.jpg" alt="Irene Roberts ">
+            <p class="name">Irene Roberts  <span class="verified">Verified Buyer</span></p>
           </div>
-          <p class="user__review">
-            "Customer service is always excellent and very quick turn around. Completely
+          <p>"Customer service is always excellent and very quick turn around. Completely
             delighted with the simplicity of the purchase and the speed of delivery."
           </p>
         </div>
-        <div class="user third-user">
-          <div class="user__name">
-            <img src="./images/image-anne.jpg" alt="">
-            <div class="credentials">
-              <h3>Anne Wallace</h3>
-              <p>Verified Buyer</p>
-            </div>
+        <div class="profile">
+          <div class="user-container">
+            <img src="./images/image-anne.jpg" alt="Anne Wallace ">
+            <p class="name">Anne Wallace <span class="verified">Verified Buyer</span></p>
           </div>
-          <p class="user__review">
-            "Put an order with this company and can only praise them for the very high
-    standard. Will definitely use them again and recommend them to everyone!"
+          <p>"Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"
           </p>
+          <!-- End of profiles -->
         </div>
-        <!-- user reviews end div -->
+        <!-- End of lower container -->
       </div>
-      <!-- container end div -->
-    </div>
+    </main>
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+      </p>
+ </footer>
   </body>
 </html>
