--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -21,12 +21,12 @@
       </p>
       <form class="form" id="form">
         <div class="form-control">
-          <input type="text" name="first-name" id="first-name" placeholder="First Name">
+          <input type="text" name="first-name" id="first Name" placeholder="First Name">
           <img src="./images/icon-error.svg" alt="" class="exclaim">
           <small>Error message</small>
         </div>
         <div class="form-control">
-          <input type="text" name="last-name" id="last-name" placeholder="Last Name">
+          <input type="text" name="last-name" id="last Name" placeholder="Last Name">
           <img src="./images/icon-error.svg" alt="" class="exclaim">
           <small>Error message</small>
         </div>
