adding README.md

--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -28,5 +28,11 @@
       <h4>1.4K <span class="data">Photos</span></h4>
     </div>
   </div>
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
+</footer>
 </body>
 </html>
