Adding default question

--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -35,10 +35,10 @@
       <!-- Question 2 -->
       <div class="data-container">
         <div class="question">
-          <p class="header">What is the maximum file upload size?</p>
+          <p class="header highlight">What is the maximum file upload size?</p>
           <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
         </div>
-        <p class="answer hidden">
+        <p class="answer ">
           No more than 2GB. All files in your account must fit your allotted storage space.
         </p>
       </div>
