--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -14,52 +14,56 @@
       <img src="./images/drawers.jpg" alt="top-image">
     </div>
     <div class="text-container">
-      <h1>Shift the overall look and feel by adding these wonderful 
-        touches to furniture in your home
-      </h1>
-      <p class="description">Ever been in a room and felt like something was missing? Perhaps 
-        it felt slightly bare and uninviting. I’ve got some simple tips 
-        to help you make any room feel complete.
-      </p>
-    <div class="changing-container">
-      <!-- Profile Container -->
-      <div class="profile-container" id="profile-container">
-        <div class="profile">
-          <picture class="person-img">
-            <img src="./images/avatar-michelle.jpg" alt="Michelle">
-          </picture>
-          <p class="name">Michelle Appleton <span class="date">28 Jun 2020</span></p>
+      <div class="text">
+        <h1>Shift the overall look and feel by adding these wonderful 
+          touches to furniture in your home
+        </h1>
+        <p class="description">Ever been in a room and felt like something was missing? Perhaps 
+          it felt slightly bare and uninviting. I’ve got some simple tips 
+          to help you make any room feel complete.
+        </p>
+      </div>
+    
+      <div class="bottom-container" id="bottom-container">
+        <!-- Changing container on click -->
+        <div class="changing-container"> <!--Profile container-->
+          <div class="profile-container" id="profile-container">
+            <div class="profile">
+              <picture class="person-img">
+                <img src="./images/avatar-michelle.jpg" alt="Michelle">
+              </picture>
+              <p class="name">Michelle Appleton <span class="date">28 Jun 2020</span></p>
+            </div>
+          </div> 
+          <div class="share-container hide" id="share-container">  <!-- Shared container-->
+            <div class="details">
+              <p>Share</p>
+              <picture class="social-icon">
+                <a href="">
+                  <img src="./images/icon-facebook.svg" alt="fb">
+                </a>
+              </picture>
+              <picture class="social-icon">
+                <a href="">
+                  <img src="./images/icon-twitter.svg" alt="twitter">
+                </a>
+              </picture>
+              <picture class="social-icon">
+                <a href="">
+                  <img src="./images/icon-pinterest.svg" alt="pinterest">
+                </a>
+              </picture>
+            </div>
+            <div class="triangle-down">
+
+            </div>
+          </div>
         </div>
         <picture class="share">
-          <img src="./images/icon-share.svg" alt="" class="share-icon" id="share-icon">
-        </picture>
-      </div> 
-      <!-- Share container -->
-      <div class="share-container hidden" id="share-container">
-        <div class="details">
-          <p>Share</p>
-          <picture class="social-icon">
-            <a href="">
-              <img src="./images/icon-facebook.svg" alt="fb">
-            </a>
-          </picture>
-          <picture class="social-icon">
-            <a href="">
-              <img src="./images/icon-twitter.svg" alt="twitter">
-            </a>
-          </picture>
-          <picture class="social-icon">
-            <a href="">
-              <img src="./images/icon-pinterest.svg" alt="pinterest">
-            </a>
-          </picture>
-        </div>
-        <picture class="share invert">
           <img src="./images/icon-share.svg" alt="" class="share-icon">
         </picture>
       </div>
-    </div>
-  </article>
+    </article>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
