--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | [Challenge Name Here]</title>
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     
     <!-- PURPLE CARD -->
     <div class="card purple quote-bg">
@@ -108,7 +108,7 @@
       </p>
     </div>
     <!-- Container End -->
-  </div>  
+  </main>  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
