--- a/huddle-landing-page-with-alternating-feature-blocks-master/index.html
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/index.html
@@ -117,18 +117,18 @@
       <!-- right container -->
       <div class="footer-container container-d">
         <div class="social-icons">
-          <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" class="social-icon" aria-label="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="social-icon" aria-label="twitter"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" class="social-icon" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
         </div>
         <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
       </div>
     </div>
   </footer>
   <!-- Attribution -->
-  <p class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
-  </p>
+  </div>
 </body>
 </html>
