--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -36,7 +36,7 @@
       <div class="data-container">
         <div class="question">
           <p class="header highlight">What is the maximum file upload size?</p>
-          <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
+          <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow invert">
         </div>
         <p class="answer ">
           No more than 2GB. All files in your account must fit your allotted storage space.
