Adding tablet sizes

--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./mediaquery.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Frontend Mentor | Equalizer landing page</title>
@@ -11,10 +12,7 @@
 <body>
   <header>
     <!-- Header -->
-    <p class="header-title">equalizer</p>
-  </header>
-  <main>
-    <!-- Top info -->
+    <img src="./assets/logo.svg" alt="equalizer" class="title">
     <article class="information">
       <h1>We make your music sound extraordinary.</h1>
       <p class="description">A system audio equalizer specifically designed for Android and iOS. Freely tune the 
@@ -22,6 +20,11 @@
       bass, mids, treble, gain control, reverb, and more!
       </p>
     </article>
+  </header>
+  
+  <main>
+    <!-- Top info -->
+    
 
     <!-- EQ info container -->
     <article class="main-background">
@@ -51,7 +54,7 @@
   </main>
   <footer class="footer">
     <article class="footer-data">
-      <p class="footer-title">equalizer</p>
+      <img src="./assets/logo.svg" alt="equalizer" class="title">
       <p class="rights">All rights reserved © Equalizer 2021</p>
       <p>Have any problems? Contact us via social media or email us at <span class="email">equalizer@example.com</span></p>
     </article>
