Adding styles for desktop

--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -55,8 +55,10 @@
   <footer class="footer">
     <article class="footer-data">
       <img src="./assets/logo.svg" alt="equalizer" class="title">
-      <p class="rights">All rights reserved © Equalizer 2021</p>
-      <p>Have any problems? Contact us via social media or email us at <span class="email">equalizer@example.com</span></p>
+      <div class="footer-text">
+        <p class="rights">All rights reserved © Equalizer 2021</p>
+        <p>Have any problems? Contact us via social media or email us at <span class="email">equalizer@example.com</span></p>
+      </div>
     </article>
     <div class="social-links">
       <a href="#" class="social-link">
